--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,41 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Virtual environments
+venv/
+env/
+.env
+.venv/
+ENV/
+**/.pytest_cache/
+**/__pycache__/
+
+# IDE settings
+.idea/
+.vscode/
+*.swp
+.DS_Store
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
 # Ignore secrets folder and its JSON files
 secrets/
 secrets/keepa_config.json
 secrets/google_service_account.json
+.env
