build: triggred deployment works now

--- a/pipeline/cloudbuild.yaml
+++ b/pipeline/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
       - '--min-instances=0'
       - '--max-instances=3'
       - '--update-env-vars'
-      - 'GCP_PROJECT_ID=$PROJECT_ID'
+      - 'GCP_PROJECT_ID=$PROJECT_ID,KEEPA_API_SECRET_NAME=keepa-api-key'
 
   # 3) Deploy the batch Job for daily sync
   - name: 'gcr.io/cloud-builders/gcloud'
@@ -42,7 +42,7 @@ steps:
           --image gcr.io/$PROJECT_ID/keepa:latest \
           --region us-central1 \
           --max-retries 3 \
-          --set-env-vars GCP_PROJECT_ID=$PROJECT_ID
+          --set-env-vars GCP_PROJECT_ID=$PROJECT_ID,KEEPA_API_SECRET_NAME=keepa-api-key
 
 # 4) Push the image by listing it here
 images:
